return status type
