# swagger.json
@@ -33,10 +33,16 @@
       }
      },
      "401": {
-      "description": "Unauthorized"
+      "description": "Unauthorized",
+      "schema": {
+       "$ref": "#/definitions/v1.Status"
+      }
      },
      "500": {
-      "description": "Bummer, something went wrong"
+      "description": "Bummer, something went wrong",
+      "schema": {
+       "$ref": "#/definitions/v1.Status"
+      }
      }
     }
    },
@@ -51,13 +57,22 @@
     "operationId": "post-callback",
     "responses": {
      "301": {
-      "description": "Moved Permanently"
+      "description": "Moved Permanently",
+      "schema": {
+       "$ref": "#/definitions/v1.Status"
+      }
      },
      "401": {
-      "description": "Unauthorized"
+      "description": "Unauthorized",
+      "schema": {
+       "$ref": "#/definitions/v1.Status"
+      }
      },
      "500": {
-      "description": "Bummer, something went wrong"
+      "description": "Bummer, something went wrong",
+      "schema": {
+       "$ref": "#/definitions/v1.Status"
+      }
      }
     }
    }
@@ -74,13 +89,22 @@
     "operationId": "login",
     "responses": {
      "301": {
-      "description": "Moved Permanently"
+      "description": "Moved Permanently",
+      "schema": {
+       "$ref": "#/definitions/v1.Status"
+      }
      },
      "401": {
-      "description": "Unauthorized"
+      "description": "Unauthorized",
+      "schema": {
+       "$ref": "#/definitions/v1.Status"
+      }
      },
      "500": {
-      "description": "Bummer, something went wrong"
+      "description": "Bummer, something went wrong",
+      "schema": {
+       "$ref": "#/definitions/v1.Status"
+      }
      }
     }
    }
@@ -103,10 +127,16 @@
       }
      },
      "401": {
-      "description": "Unauthorized"
+      "description": "Unauthorized",
+      "schema": {
+       "$ref": "#/definitions/v1.Status"
+      }
      },
      "500": {
-      "description": "Bummer, something went wrong"
+      "description": "Bummer, something went wrong",
+      "schema": {
+       "$ref": "#/definitions/v1.Status"
+      }
      }
     }
    },
@@ -119,6 +149,16 @@
     ],
     "summary": "Create organization",
     "operationId": "createOrganization",
+    "parameters": [
+     {
+      "name": "body",
+      "in": "body",
+      "required": true,
+      "schema": {
+       "$ref": "#/definitions/v1alpha1.Organization"
+      }
+     }
+    ],
     "responses": {
      "200": {
       "description": "OK",
@@ -127,10 +167,16 @@
       }
      },
      "401": {
-      "description": "Unauthorized"
+      "description": "Unauthorized",
+      "schema": {
+       "$ref": "#/definitions/v1.Status"
+      }
      },
      "500": {
-      "description": "Bummer, something went wrong"
+      "description": "Bummer, something went wrong",
+      "schema": {
+       "$ref": "#/definitions/v1.Status"
+      }
      }
     }
    }
@@ -162,10 +208,16 @@
       }
      },
      "401": {
-      "description": "Unauthorized"
+      "description": "Unauthorized",
+      "schema": {
+       "$ref": "#/definitions/v1.Status"
+      }
      },
      "500": {
-      "description": "Bummer, something went wrong"
+      "description": "Bummer, something went wrong",
+      "schema": {
+       "$ref": "#/definitions/v1.Status"
+      }
      }
     }
    },
@@ -189,13 +241,22 @@
     ],
     "responses": {
      "200": {
-      "description": "OK"
+      "description": "OK",
+      "schema": {
+       "$ref": "#/definitions/v1.Status"
+      }
      },
      "401": {
-      "description": "Unauthorized"
+      "description": "Unauthorized",
+      "schema": {
+       "$ref": "#/definitions/v1.Status"
+      }
      },
      "500": {
-      "description": "Bummer, something went wrong"
+      "description": "Bummer, something went wrong",
+      "schema": {
+       "$ref": "#/definitions/v1.Status"
+      }
      }
     }
    }
@@ -227,10 +288,16 @@
       }
      },
      "401": {
-      "description": "Unauthorized"
+      "description": "Unauthorized",
+      "schema": {
+       "$ref": "#/definitions/v1.Status"
+      }
      },
      "500": {
-      "description": "Bummer, something went wrong"
+      "description": "Bummer, something went wrong",
+      "schema": {
+       "$ref": "#/definitions/v1.Status"
+      }
      }
     }
    },
@@ -244,6 +311,14 @@
     "summary": "Create workspace",
     "operationId": "createWorkspace",
     "parameters": [
+     {
+      "name": "body",
+      "in": "body",
+      "required": true,
+      "schema": {
+       "$ref": "#/definitions/v1alpha1.Workspace"
+      }
+     },
      {
       "type": "string",
       "description": "Name of an organization",
@@ -260,10 +335,16 @@
       }
      },
      "401": {
-      "description": "Unauthorized"
+      "description": "Unauthorized",
+      "schema": {
+       "$ref": "#/definitions/v1.Status"
+      }
      },
      "500": {
-      "description": "Bummer, something went wrong"
+      "description": "Bummer, something went wrong",
+      "schema": {
+       "$ref": "#/definitions/v1.Status"
+      }
      }
     }
    }
@@ -302,10 +383,16 @@
       }
      },
      "401": {
-      "description": "Unauthorized"
+      "description": "Unauthorized",
+      "schema": {
+       "$ref": "#/definitions/v1.Status"
+      }
      },
      "500": {
-      "description": "Bummer, something went wrong"
+      "description": "Bummer, something went wrong",
+      "schema": {
+       "$ref": "#/definitions/v1.Status"
+      }
      }
     }
    },
@@ -336,13 +423,22 @@
     ],
     "responses": {
      "200": {
-      "description": "OK"
+      "description": "OK",
+      "schema": {
+       "$ref": "#/definitions/v1.Status"
+      }
      },
      "401": {
-      "description": "Unauthorized"
+      "description": "Unauthorized",
+      "schema": {
+       "$ref": "#/definitions/v1.Status"
+      }
      },
      "500": {
-      "description": "Bummer, something went wrong"
+      "description": "Bummer, something went wrong",
+      "schema": {
+       "$ref": "#/definitions/v1.Status"
+      }
      }
     }
    }
@@ -657,6 +753,94 @@
     },
     "uid": {
      "description": "UID of the referent. More info: http://kubernetes.io/docs/user-guide/identifiers#uids",
+     "type": "string"
+    }
+   }
+  },
+  "v1.Status": {
+   "description": "Status is a return value for calls that don't return other objects.",
+   "properties": {
+    "apiVersion": {
+     "description": "APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources",
+     "type": "string"
+    },
+    "code": {
+     "description": "Suggested HTTP return code for this status, 0 if not set.",
+     "type": "integer",
+     "format": "int32"
+    },
+    "details": {
+     "description": "Extended data associated with the reason.  Each reason may define its own extended details. This field is optional and the data returned is not guaranteed to conform to any schema except that defined by the reason type.",
+     "$ref": "#/definitions/v1.StatusDetails"
+    },
+    "kind": {
+     "description": "Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds",
+     "type": "string"
+    },
+    "message": {
+     "description": "A human-readable description of the status of this operation.",
+     "type": "string"
+    },
+    "metadata": {
+     "description": "Standard list metadata. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds",
+     "$ref": "#/definitions/v1.ListMeta"
+    },
+    "reason": {
+     "description": "A machine-readable description of why this operation is in the \"Failure\" status. If this value is empty there is no information available. A Reason clarifies an HTTP status code but does not override it.",
+     "type": "string"
+    },
+    "status": {
+     "description": "Status of the operation. One of: \"Success\" or \"Failure\". More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#spec-and-status",
+     "type": "string"
+    }
+   }
+  },
+  "v1.StatusCause": {
+   "description": "StatusCause provides more information about an api.Status failure, including cases when multiple errors are encountered.",
+   "properties": {
+    "field": {
+     "description": "The field of the resource that has caused this error, as named by its JSON serialization. May include dot and postfix notation for nested attributes. Arrays are zero-indexed.  Fields may appear more than once in an array of causes due to fields having multiple errors. Optional.\n\nExamples:\n  \"name\" - the field \"name\" on the current resource\n  \"items[0].name\" - the field \"name\" on the first array entry in \"items\"",
+     "type": "string"
+    },
+    "message": {
+     "description": "A human-readable description of the cause of the error.  This field may be presented as-is to a reader.",
+     "type": "string"
+    },
+    "reason": {
+     "description": "A machine-readable description of the cause of the error. If this value is empty there is no information available.",
+     "type": "string"
+    }
+   }
+  },
+  "v1.StatusDetails": {
+   "description": "StatusDetails is a set of additional properties that MAY be set by the server to provide additional information about a response. The Reason field of a Status object defines what attributes will be set. Clients must ignore fields that do not match the defined type of each attribute, and should assume that any attribute may be empty, invalid, or under defined.",
+   "properties": {
+    "causes": {
+     "description": "The Causes array includes more details associated with the StatusReason failure. Not all StatusReasons may provide detailed causes.",
+     "type": "array",
+     "items": {
+      "$ref": "#/definitions/v1.StatusCause"
+     }
+    },
+    "group": {
+     "description": "The group attribute of the resource associated with the status StatusReason.",
+     "type": "string"
+    },
+    "kind": {
+     "description": "The kind attribute of the resource associated with the status StatusReason. On some operations may differ from the requested resource Kind. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds",
+     "type": "string"
+    },
+    "name": {
+     "description": "The name attribute of the resource associated with the status StatusReason (when there is a single name which can be described).",
+     "type": "string"
+    },
+    "retryAfterSeconds": {
+     "description": "If specified, the time in seconds before the operation should be retried. Some errors may indicate the client must take an alternate action - for those errors this field may indicate how long to wait before taking the alternate action.",
+     "type": "integer",
+     "format": "int32"
+    },
+    "uid": {
+     "description": "UID of the resource. (when there is a single resource which can be described). More info: http://kubernetes.io/docs/user-guide/identifiers#uids",
      "type": "string"
     }
    }
